--- a/dbt_101/dbt_project.yml
+++ b/dbt_101/dbt_project.yml
@@ -17,6 +17,7 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+docs-paths: ["docs"]
 
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
@@ -32,5 +33,3 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_101:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
