Updated yml files to include working dir path.

--- a/.github/workflows/dbt-cd.yml
+++ b/.github/workflows/dbt-cd.yml
@@ -2,7 +2,7 @@ name: dbt CD
 
 on:
   release:
-    types: [published]  # Triggers on GitHub release publication
+    types: [published]
 
 jobs:
   dbt-deploy:
@@ -14,7 +14,7 @@ jobs:
       SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
       SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
       SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
-      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}  # use this for both CI & CD
+      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
       SNOWFLAKE_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
       SNOWFLAKE_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
 
@@ -29,7 +29,12 @@ jobs:
       - name: Install dbt and dependencies
         run: |
           pip install -r requirements.txt
-          dbt deps
+        # No working-directory needed here — this reads from the repo root
 
-      - name: Build and deploy models
+      - name: Install dbt packages
+        run: dbt deps
+        working-directory: ./dbt_101
+
+      - name: Deploy dbt models
         run: dbt build --target prod
+        working-directory: ./dbt_101
