--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -1,36 +1,47 @@
 name: dbt CI
+
 on:
   pull_request:
     branches: [ main ]
 
 jobs:
-  dbt-test:
+  dbt-ci:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-      - name: Install dbt
-        run: |
-          pip install sqlfluff dbt-core dbt-snowflake
-          dbt deps
-      
-      - name: Format the code
-        run: sqlfluff lint .
-      
-      - name: Run dbt tests
-        run: dbt build --target ci
 
     env:
-      # PROJECT_DIR: ./dbt_m02w03l02
-      # DBT_PROFILES_DIR: ./profiles
       SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
       SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
       SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
       SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-      SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}_${{ github.event.number }}
-      SNOWFLAKE_CI_USER: ${{ secrets.SNOWFLAKE_CI_USER }}
-      SNOWFLAKE_CI_USER_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_CI_USER_PRIVATE_KEY }}
-      # SNOWFLAKE_CI_USER_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_CI_USER_PRIVATE_KEY_PASSPHRASE }}
+      SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+      SNOWFLAKE_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
+      SNOWFLAKE_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install dbt and dependencies
+        run: pip install -r requirements.txt
+        # No working-directory needed — requirements.txt is in root
+
+      - name: Install dbt packages
+        run: dbt deps
+        working-directory: ./dbt_101
+
+      - name: Debug dbt profile connection
+        run: dbt debug --target dev
+        working-directory: ./dbt_101
+
+      - name: Run dbt models
+        run: dbt run --target dev
+        working-directory: ./dbt_101
+
+      - name: Test dbt models
+        run: dbt test --target dev
+        working-directory: ./dbt_101
